adição dos inputs e buttons, estilo

--- a/www/index.html
+++ b/www/index.html
@@ -18,10 +18,67 @@
   
   <div class="container">
 
-    <div class="row">
+    <div class="row linha">
       <div class="col-xs-12">
         <h1>Cadastro de livro</h1>
       </div>
+    </div>
+
+    <div class="jumbotron">
+
+      <div class="row linha">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="">Título do livro:</label>
+            <input class="form-control" type="text" id="titulo" name="titulo">
+          </div>
+        </div>
+      </div>
+
+      <div class="row linha">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="">Autor do livro:</label>
+            <input class="form-control" type="text" id="autor" name="autor">
+          </div>
+        </div>
+      </div>
+
+      <div class="row linha">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="">Ano:</label>
+            <input class="form-control" type="number" id="ano" name="ano" max="2019" min="1900">
+          </div>
+        </div>
+      </div>
+
+      <div class="row linha">
+        <div class="col-xs-4">
+          <div class="form-group">
+            <button class="btn btn-block btn-primary" id="btnNovo">Novo</button>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <div class="form-group">
+            <button class="btn btn-block btn-success" id="btnSalvar">Salvar</button>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <div class="form-group">
+            <button class="btn btn-block btn-warning" id="btnCancelar">Cancelar</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="row linha">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <button class="btn btn-block btn-info" id="btnListar">Listar</button>
+          </div>
+        </div>
+      </div>
+
     </div>
 
   </div>
