--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="">Título do livro:</label>
-            <input class="form-control" type="text" id="titulo" name="titulo">
+            <input class="form-control inp" type="text" id="titulo" name="titulo">
           </div>
         </div>
       </div>
@@ -39,7 +39,7 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="">Autor do livro:</label>
-            <input class="form-control" type="text" id="autor" name="autor">
+            <input class="form-control inp" type="text" id="autor" name="autor">
           </div>
         </div>
       </div>
@@ -48,7 +48,7 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="">Ano:</label>
-            <input class="form-control" type="number" id="ano" name="ano" max="2019" min="1900">
+            <input class="form-control inp" type="number" id="ano" name="ano" max="2019" min="1900">
           </div>
         </div>
       </div>
