fim do CRUD básico

--- a/www/index.html
+++ b/www/index.html
@@ -54,7 +54,7 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="">Ano:</label>
-            <input class="form-control inp" type="number" id="ano" name="ano" max="2019" min="1900">
+            <input class="form-control inp" type="number" id="ano" name="ano" max="2019" min="1900" maxlength="4">
           </div>
         </div>
       </div>
