ajustes, começo da adição da foto

--- a/www/index.html
+++ b/www/index.html
@@ -59,6 +59,23 @@
         </div>
       </div>
 
+      <div class="row linha" style="width: 80vw">
+        <div class="col-xs-12 rfoto">
+          <div class="form-group">
+            <img src="" alt="" id="imgfoto">
+          </div>
+        </div>
+      </div>
+
+      <div class="row linha">
+        <div class="col-xs-8"></div>
+        <div class="col-xs-4">
+          <div class="form-group">
+            <button class="btn btn-block btn-info" id="btnCamera">Tirar foto</button>
+          </div>
+        </div>
+      </div>
+
       <div class="row linha">
         <div class="col-xs-4">
           <div class="form-group">
@@ -76,6 +93,8 @@
           </div>
         </div>
       </div>
+
+      
 
       <div class="row linha">
         <div class="col-xs-12">
